--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bean/echarts-config",
+    "name": "wangnz121212/echarts-config",
     "description": "ECHARTS CONFIG",
     "type": "library",
     "license": "MIT",
